maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:47: error: not found: value cpt
      setIndication(posXNote, posYNote-1, cpt)
                                          ^JediEscaper:49: error: not found: value cpt
      setIndication(posXNote-1, posYNote, cpt)
                                          ^JediEscaper:50: error: type mismatch;
 found   : Int
 required: Boolean
    }; if (posYNote < getMondeHauteur()-1 && getIndication(posXNote, posYNote+1) &&  !aMurNord(posXNote, posYNote+1)) {
                                                          ^JediEscaper:51: error: not found: value cpt
      setIndication(posXNote, posYNote+1, cpt)
                                          ^JediEscaper:52: error: type mismatch;
 found   : Int
 required: Boolean
    }; if (posXNote < getMondeLargeur()-1 && getIndication(posXNote+1, posYNote) &&  !aMurOuest(posXNote+1, posYNote)) {
                                                          ^JediEscaper:53: error: not found: value cpt
      setIndication(posXNote+1, posYNote, cpt)
                                          ^